--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e27b2a21",
+   "id": "44248dfa",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3ead38",
+   "id": "e8e0e622",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a94e906",
+   "id": "34810d27",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f8d03be",
+   "id": "49dc02f9",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "711b31ec",
+   "id": "dca9fec2",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5406591b",
+   "id": "4e95e380",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8087fcfa",
+   "id": "4bb9573b",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ebbf23",
+   "id": "6265cadd",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "895bf3cf",
+   "id": "008158d9",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b9f8ab3",
+   "id": "e9acd00d",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adf7bf69",
+   "id": "553d594b",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e53f26b",
+   "id": "aa2d910e",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6236330",
+   "id": "bd1a7c52",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad3574d1",
+   "id": "1faa4af9",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b95e5394",
+   "id": "26964424",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c53dbc1",
+   "id": "d9daa39d",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b400ddc",
+   "id": "12834a1a",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0419df6",
+   "id": "a972131d",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "628c6c92",
+   "id": "09b4249c",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48226ef8",
+   "id": "fae7fe14",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f73ed796",
+   "id": "1f0dedcc",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b63f882e",
+   "id": "6cceaedf",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00d2a7bb",
+   "id": "4b76a714",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a62687bc",
+   "id": "9b5bb9d9",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4284b7f4",
+   "id": "1a23d796",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a187de4",
+   "id": "f3aa553b",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d91bf116",
+   "id": "f2ac0dbc",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "074f8469",
+   "id": "bd839503",
    "metadata": {
     "hide-output": false
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a375592",
+   "id": "ec42219b",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aea746a2",
+   "id": "e8d0947d",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eab6332",
+   "id": "2ebfaa54",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dbdc408",
+   "id": "5245efd0",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c126fb9",
+   "id": "71be10b4",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7f14896",
+   "id": "e57ee44e",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ef9d8c9",
+   "id": "20b7e7be",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a38f7a6",
+   "id": "d7adae9e",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ad635e6",
+   "id": "fbe56369",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e91406bd",
+   "id": "82fa33d5",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffbdc9b1",
+   "id": "fbfbf24d",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7771ae",
+   "id": "333aec65",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a045aa18",
+   "id": "b61e2169",
    "metadata": {
     "hide-output": false
    },
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a76eec0",
+   "id": "7dabea94",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c91160bd",
+   "id": "85acbd27",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7952b0a",
+   "id": "8421519a",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4493e80f",
+   "id": "36d527d7",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0d9fedd",
+   "id": "7515297e",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "211bc5ae",
+   "id": "612d21a6",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36bbd899",
+   "id": "4d296b8c",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   }
  ],
  "metadata": {
-  "date": 1747720850.6792445,
+  "date": 1750763757.454859,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
