--- a/opt_savings_2.ipynb
+++ b/opt_savings_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "046cc90d",
+   "id": "cadc14ba",
    "metadata": {},
    "source": [
     "# Optimal Savings II: Alternative Algorithms"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69f4c495",
+   "id": "3510d37e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9164c602",
+   "id": "47cfbf1a",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "882ca7b8",
+   "id": "ed0db76e",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f44c9c7",
+   "id": "9fd5ed42",
    "metadata": {
     "hide-output": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7cef907",
+   "id": "b695ac27",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running."
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cc61f6c",
+   "id": "9eee7541",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89615cb7",
+   "id": "8b440a01",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cca224b",
+   "id": "42e32b58",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ff1d2e8",
+   "id": "38d08b83",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c0c07c",
+   "id": "b0cdf3b9",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e651facb",
+   "id": "f56b5196",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82237564",
+   "id": "f69ea984",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd614f5b",
+   "id": "84edc88b",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to vectorize $ B $ by simulating nested loops."
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1426ccbb",
+   "id": "81bfc2a5",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d18fbec",
+   "id": "7df4ca0b",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ B $."
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a432e5f",
+   "id": "33737142",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69ea7b49",
+   "id": "76e4140f",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ccb3ace",
+   "id": "ea7e2daa",
    "metadata": {
     "hide-output": false
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f80aece",
+   "id": "773796e6",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eabb313",
+   "id": "d7d6f81d",
    "metadata": {
     "hide-output": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac2a5c2d",
+   "id": "f737fa93",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c26a050",
+   "id": "47bfac52",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac6a4e05",
+   "id": "963cbf2d",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9fd95ee",
+   "id": "3955073b",
    "metadata": {
     "hide-output": false
    },
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c48936c",
+   "id": "6c780820",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ r_\\sigma $."
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aab9ca95",
+   "id": "6d5189e6",
    "metadata": {
     "hide-output": false
    },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f10648c",
+   "id": "60684bb9",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $ going through similar steps"
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "043e9b45",
+   "id": "bdc10ac0",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8c7aa43",
+   "id": "31d4f6a3",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "673ea512",
+   "id": "5fc19362",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "444ecd8b",
+   "id": "ba70a99c",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f768c9a9",
+   "id": "88ddaffd",
    "metadata": {
     "hide-output": false
    },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38fb46b4",
+   "id": "8c028e53",
    "metadata": {},
    "source": [
     "## Iteration\n",
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ddfd337",
+   "id": "2a4e1a30",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f86b406",
+   "id": "653394e7",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9fd386f",
+   "id": "efd64b0d",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00ad9b8e",
+   "id": "721e0d72",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfe67940",
+   "id": "ea88847e",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29831070",
+   "id": "79faba53",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7507d7a",
+   "id": "9c4d5ca8",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0302501",
+   "id": "badfae47",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ded21ec0",
+   "id": "a37f8792",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b5bf8d3",
+   "id": "988f8373",
    "metadata": {},
    "source": [
     "Here’s HPI."
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45a29367",
+   "id": "b0000311",
    "metadata": {
     "hide-output": false
    },
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84e8fd36",
+   "id": "46f93b2d",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a87a4385",
+   "id": "8b86a2e6",
    "metadata": {
     "hide-output": false
    },
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5155487",
+   "id": "2dfc393e",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eeb6987",
+   "id": "3f9f4ab3",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55b82574",
+   "id": "079e3051",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fd937fb",
+   "id": "c35438a2",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36521959",
+   "id": "85629bfa",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb933c61",
+   "id": "5fa911a7",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1589f163",
+   "id": "45cb0b06",
    "metadata": {
     "hide-output": false
    },
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bcadc65",
+   "id": "47a3a0f5",
    "metadata": {
     "hide-output": false
    },
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92fa076f",
+   "id": "449355e3",
    "metadata": {
     "hide-output": false
    },
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1dfacfc",
+   "id": "e709a974",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eb8f567",
+   "id": "3d23fc05",
    "metadata": {
     "hide-output": false
    },
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "471271d8",
+   "id": "e39183e4",
    "metadata": {
     "hide-output": false
    },
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14f430c1",
+   "id": "cea21b40",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "414b416c",
+   "id": "c1c97a78",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7911862a",
+   "id": "272a17ff",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5504d54e",
+   "id": "1505d7b1",
    "metadata": {
     "hide-output": false
    },
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71c108e5",
+   "id": "7cf5c6c1",
    "metadata": {
     "hide-output": false
    },
@@ -1033,7 +1033,7 @@
   }
  ],
  "metadata": {
-  "date": 1747720850.897495,
+  "date": 1750763757.6861434,
   "filename": "opt_savings_2.md",
   "kernelspec": {
    "display_name": "Python",
