--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "30f5a7e3",
+   "id": "b764fbb9",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dea9db1d",
+   "id": "110eb037",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d40d68e",
+   "id": "142da8a6",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58310a2e",
+   "id": "4027b893",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d42c56",
+   "id": "c8002065",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "466fd802",
+   "id": "60e2a742",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e484e3e8",
+   "id": "12f5866d",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4808d909",
+   "id": "100d2d7c",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f992a5c6",
+   "id": "908e3dd6",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e604505",
+   "id": "957af418",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eff606a",
+   "id": "0440f74f",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a059c410",
+   "id": "e91e45f7",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2260db87",
+   "id": "c99df93f",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2be4300a",
+   "id": "e57db584",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0b97d05",
+   "id": "b8ad7189",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f39aee9f",
+   "id": "da3c8ea2",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b91a89fd",
+   "id": "efed17f4",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10ff0ed3",
+   "id": "27c788c6",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25702cae",
+   "id": "58196f5e",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5b01f28",
+   "id": "b47ade24",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c3a9582",
+   "id": "1b5cdb5c",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3b37198",
+   "id": "f0625017",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16bb4b06",
+   "id": "0f4592f1",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ba8cadd",
+   "id": "11082fae",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6df3dc7",
+   "id": "b3c76483",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a4211c3",
+   "id": "4075ee59",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95fad38b",
+   "id": "9c679396",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5262cdb0",
+   "id": "d1d89069",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74810b15",
+   "id": "408f16c9",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96a15872",
+   "id": "fc36a490",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22dbfa49",
+   "id": "11fa63c6",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1850272",
+   "id": "c5110ea0",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a706bc2",
+   "id": "1fac456c",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b4c83ac",
+   "id": "3b09ddd0",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a739e2d2",
+   "id": "e31d82cb",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f2045e",
+   "id": "71fe5f62",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8f36177",
+   "id": "b4ece6c9",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "655c910a",
+   "id": "95f256b0",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af15e723",
+   "id": "e724c619",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e24bfbc2",
+   "id": "06656efb",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b562b5c3",
+   "id": "d783235f",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c90939e",
+   "id": "6b8ca5e2",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a77b473",
+   "id": "1d7601c3",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5b7ed11",
+   "id": "e2f81728",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05bce4ea",
+   "id": "625402f1",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cef7655",
+   "id": "107eb097",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c52e4658",
+   "id": "1f026e15",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfecd9b2",
+   "id": "c8ccd192",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "708c9248",
+   "id": "ec45db74",
    "metadata": {
     "hide-output": false
    },
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdea7c21",
+   "id": "989bcf72",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76a30cb2",
+   "id": "e7542a28",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e397ba03",
+   "id": "78dbf2f0",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8538cd1",
+   "id": "4774a792",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "998eb8fe",
+   "id": "b44295ae",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc0eec15",
+   "id": "d62319fa",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec2acce0",
+   "id": "7be8c94c",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d1bfe61",
+   "id": "ce698701",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfcd8b7d",
+   "id": "32a80726",
    "metadata": {
     "hide-output": false
    },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee644e0b",
+   "id": "391280db",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad160907",
+   "id": "5f2afeec",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea401c16",
+   "id": "99930589",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e8636d0",
+   "id": "c020fdfa",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6ae145c",
+   "id": "d5eb9e7c",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "319bb48a",
+   "id": "07de189c",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc15d7a3",
+   "id": "c9288faa",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -989,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eba787c4",
+   "id": "0dbc4a19",
    "metadata": {
     "hide-output": false
    },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c91f75e",
+   "id": "e6bc2f1d",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f4d1658",
+   "id": "c7a35601",
    "metadata": {
     "hide-output": false
    },
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c9d210a",
+   "id": "da755e16",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1032,7 +1032,7 @@
   }
  ],
  "metadata": {
-  "date": 1747720850.863902,
+  "date": 1750763757.6510947,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
